--- a/images/program.html
+++ b/images/program.html
@@ -1,105 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Netflix Clone Responsive</title>
+
+        <!-- Bootstrap -->
+        <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+        />
+
+        <style>
+          .header-section {
+            background-image: url("images/ba.jpg");
+            background-size: cover;
+            background-position: center;
+            padding: 120px 20px;
+            text-align: center;
+            color: white;
+          }
+
+          .feature img {
+            width: 100%;
+            max-width: 140px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            border-radius: 12px;
+          }
+
+          .info-card {
+            background-color: rgba(23, 11, 73, 0.7);
+            border-radius: 12px;
+            color: white;
+            padding: 20px;
+            text-align: center;
+          }
+
+          .info-card img {
+            width: 40px;
+            height: 40px;
+            margin-top: 20px;
+          }
+          .body {
+          }
+        </style>
+      </head>
+
+      <body class="bg-dark text-white">
+        <!-- ================= HEADER ================= -->
+        <div class="header-section" style="background-image: url(ba.jpg)">
+          <div class="d-flex justify-content-between align-items-center px-3">
+            <h1 class="text-danger fw-bold">NETFLIX</h1>
+            <a href="#" class="btn btn-danger px-4">Sign In</a>
+          </div>
+
+          <h1 class="mt-5 fw-bold">Unlimited movies, TV shows, and more</h1>
+          <p class="lead">
+            Starts at ₦2,500. Cancel anytime.<br />Ready to watch? Enter your
+            email to create or restart your membership.
+          </p>
+
+          <div class="row justify-content-center mt-4">
+            <div class="col-md-4 mb-3">
+              <input
+                type="email"
+                class="form-control"
+                placeholder="Enter your email"
+              />
+            </div>
+            <div class="col-md-2">
+              <a href="#" class="btn btn-danger w-100 py-2">Get Started</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- ================= IMAGES SECTION ================= -->
+        <div class="container my-5">
+          <div class="row text-center g-4">
+            <div class="col-6 col-lg-3 feature">
+              <img src="dramas4.jpg" alt="" />
+            </div>
+            <div class="col-6 col-lg-3 feature">
+              <img src="dramas3.jpg" alt="" />
+            </div>
+            <div class="col-6 col-lg-3 feature">
+              <img src="dramas1.jpg" alt="" />
+            </div>
+            <div class="col-6 col-lg-3 feature">
+              <img src="dramas.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+        
+        <!-- ================= INFO CARDS ================= -->
+        <div class="container my-5">
+          <div class="row g-4">
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="info-card">
+                Enjoy on your TV, Playstation, Xbox, Chromecast and more.
+                <img src="latop.jpg" alt="" />
+              </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="info-card">
+                Download your shows to watch offline.
+                <img src="arow.png" alt="" />
+              </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="info-card">
+                Watch everywhere and stream unlimited movies.
+                <img src="ero.PNG" alt="" />
+              </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="info-card">
+                Create profiles for kids safely.
+                <img src="message.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ================= FAQ ================= -->
+        <div class="container my-5">
+          <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+
+          <div class="accordion" id="faqAccordion">
+            <!-- Item 1 -->
+            <div class="accordion-item bg-dark text-white">
+              <h2 class="accordion-header" id="faq1">
+                <button
+                  class="accordion-button bg-dark text-white"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#answer1"
+                >
+                  What is Netflix?
+                </button>
+              </h2>
+              <div
+                id="answer1"
+                class="accordion-collapse collapse show"
+                data-bs-parent="#faqAccordion"
+              >
+                <div class="accordion-body">
+                  Netflix is a streaming service with movies, series,
+                  documentaries…
+                </div>
+              </div>
+            </div>
+
+            <!-- Item 2 -->
+            <div class="accordion-item bg-dark text-white mt-2">
+              <h2 class="accordion-header" id="faq2">
+                <button
+                  class="accordion-button collapsed bg-dark text-white"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#answer2"
+                >
+                  How much does Netflix cost?
+                </button>
+              </h2>
+              <div
+                id="answer2"
+                class="accordion-collapse collapse"
+                data-bs-parent="#faqAccordion"
+              >
+                <div class="accordion-body">
+                  Plans start at ₦2,500 per month.
+                </div>
+              </div>
+            </div>
+            <!-- section1/2 -->
+            <div class="container my-5">
+              <div class="row g-4">
+                <div class="col-12 col-sm-6 col-lg-3 feature">
+                  <img src="armoir.jpg" alt="Feature 1" />
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 feature">
+                  <img src="armoir.jpg" alt="Feature 2" />
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 feature">
+                  <img src="armoir.jpg" alt="Feature 3" />
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 feature">
+                  <img src="armoir.jpg" alt="Feature 4" />
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Item 3 -->
+            <div class="accordion-item bg-dark text-white mt-2">
+              <h2 class="accordion-header" id="faq3">
+                <button
+                  class="accordion-button collapsed bg-dark text-white"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#answer3"
+                >
+                  Can I watch offline?
+                </button>
+              </h2>
+              <div
+                id="answer3"
+                class="accordion-collapse collapse"
+                data-bs-parent="#faqAccordion"
+              >
+                <div class="accordion-body">
+                  Yes, you can download movies and series.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ================= FOOTER ================= -->
+        <footer class="container text-center py-4 text-white-50">
+          <div class="row">
+            <div class="col">FAQ • Help Center • Account</div>
+            <div class="col">Investor Relations • Jobs • Terms</div>
+            <div class="col">Privacy • Cookies • Corporate Info</div>
+            <div class="col">Speed Test • Legal Notices</div>
+          </div>
+          <p class="mt-3">© 2025 Netflix Clone | Built with Bootstrap 5</p>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+      </body>
+    </html>
+    , initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    <div class="accordion" id="accordionExample">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button
-            class="accordion-button"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapseOne"
-            aria-expanded="true"
-            aria-controls="collapseOne"
-          >
-            Accordion Item #1
-          </button>
-        </h2>
-        <div
-          id="collapseOne"
-          class="accordion-collapse collapse show"
-          aria-labelledby="headingOne"
-          data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            <strong>This is the first item's accordion body.</strong> It is
-            shown by default, until the collapse plugin adds the appropriate
-            classes that we use to style each element. These classes control the
-            overall appearance, as well as the showing and hiding via CSS
-            transitions. You can modify any of this with custom CSS or
-            overriding our default variables. It's also worth noting that just
-            about any HTML can go within the <code>.accordion-body</code>,
-            though the transition does limit overflow.
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-          <button
-            class="accordion-button collapsed"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapseTwo"
-            aria-expanded="false"
-            aria-controls="collapseTwo"
-          >
-            Accordion Item #2
-          </button>
-        </h2>
-        <div
-          id="collapseTwo"
-          class="accordion-collapse collapse"
-          aria-labelledby="headingTwo"
-          data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            <strong>This is the second item's accordion body.</strong> It is
-            hidden by default, until the collapse plugin adds the appropriate
-            classes that we use to style each element. These classes control the
-            overall appearance, as well as the showing and hiding via CSS
-            transitions. You can modify any of this with custom CSS or
-            overriding our default variables. It's also worth noting that just
-            about any HTML can go within the <code>.accordion-body</code>,
-            though the transition does limit overflow.
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-          <button
-            class="accordion-button collapsed"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapseThree"
-            aria-expanded="false"
-            aria-controls="collapseThree"
-          >
-            Accordion Item #3
-          </button>
-        </h2>
-        <div
-          id="collapseThree"
-          class="accordion-collapse collapse"
-          aria-labelledby="headingThree"
-          data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            <strong>This is the third item's accordion body.</strong> It is
-            hidden by default, until the collapse plugin adds the appropriate
-            classes that we use to style each element. These classes control the
-            overall appearance, as well as the showing and hiding via CSS
-            transitions. You can modify any of this with custom CSS or
-            overriding our default variables. It's also worth noting that just
-            about any HTML can go within the <code>.accordion-body</code>,
-            though the transition does limit overflow.
-          </div>
-        </div>
-      </div>
-    </div>
-</body>
+  </head>
+  <body></body>
 </html>
