--- a/main.html
+++ b/main.html
@@ -48,7 +48,10 @@
   </head>
   <body>
    
-
+<p class="text-danger">
+  <span class="visually-hidden">Danger: </span>
+  This action is not reversible
+</p>
     <div class="container">
       <div class="row g-4">
         <!-- Section 1 -->
