--- a/images/program.html
+++ b/images/program.html
@@ -63,7 +63,7 @@
 
           <h1 class="mt-5 fw-bold">Unlimited movies, TV shows, and more</h1>
           <p class="lead">
-            Starts at ₦2,500. Cancel anytime.<br />Ready to watch? Enter your
+            Starts at ₦2,500. Cancel anytime.<br />Ready to watch? Enter yourgi
             email to create or restart your membership.
           </p>
 
@@ -98,7 +98,7 @@
             </div>
           </div>
         </div>
-        
+
         <!-- ================= INFO CARDS ================= -->
         <div class="container my-5">
           <div class="row g-4">
