--- a/jutiffy.html
+++ b/jutiffy.html
@@ -4,27 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-</head>
-<body>
-  <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Netflix Clone Responsive</title>
-
-        <!-- Bootstrap -->
+     <!-- Bootstrap -->
         <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
         />
 
-        <style>
+   <style>
           .header-section {
             background-image: url("images/ba.jpg");
             background-size: cover;
@@ -59,11 +45,11 @@
           .body {
           }
         </style>
-      </head>
-
-      <body class="bg-dark text-white">
+</head>
+<body>
+     <body class="bg-dark text-white">
         <!-- ================= HEADER ================= -->
-        <div class="header-section" style="background-image: url(ba.jpg)">
+        <div class="header-section" style="background-image: url(./images/ba.jpg);">
           <div class="d-flex justify-content-between align-items-center px-3">
             <h1 class="text-danger fw-bold">NETFLIX</h1>
             <a href="#" class="btn btn-danger px-4">Sign In</a>
@@ -93,48 +79,48 @@
         <div class="container my-5">
           <div class="row text-center g-4">
             <div class="col-6 col-lg-3 feature">
-              <img src="dramas4.jpg" alt="" />
+              <img src="./images/dramas1.jpg" alt="" />
             </div>
             <div class="col-6 col-lg-3 feature">
-              <img src="dramas3.jpg" alt="" />
+              <img src="./images/dramas3.jpg" alt="" />
             </div>
             <div class="col-6 col-lg-3 feature">
-              <img src="dramas1.jpg" alt="" />
+              <img src="./images/dramas4.jpg" alt="" />
             </div>
             <div class="col-6 col-lg-3 feature">
-              <img src="dramas.jpg" alt="" />
+              <img src="./images/dramas.jpg" alt="" />
             </div>
           </div>
         </div>
-        
+
         <!-- ================= INFO CARDS ================= -->
         <div class="container my-5">
           <div class="row g-4">
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="info-card">
                 Enjoy on your TV, Playstation, Xbox, Chromecast and more.
-                <img src="latop.jpg" alt="" />
+                <img src="./images/latop.jpg" alt="" />
               </div>
             </div>
 
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="info-card">
                 Download your shows to watch offline.
-                <img src="arow.png" alt="" />
+                <img src="./images/arow.png" alt="" />
               </div>
             </div>
 
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="info-card">
                 Watch everywhere and stream unlimited movies.
-                <img src="ero.PNG" alt="" />
+                <img src="./images/ero.PNG" alt="" />
               </div>
             </div>
 
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="info-card">
                 Create profiles for kids safely.
-                <img src="message.jpg" alt="" />
+                <img src="./images/message.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -193,25 +179,25 @@
             <div class="container my-5">
               <div class="row g-4">
                 <div class="col-12 col-sm-6 col-lg-3 feature">
-                  <img src="armoir.jpg" alt="Feature 1" />
+                  <img src="./images/armoir.jpg" alt="Feature 1" />
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   </p>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 feature">
-                  <img src="armoir.jpg" alt="Feature 2" />
+                  <img src="./images/armoir.jpg" alt="Feature 2" />
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   </p>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 feature">
-                  <img src="armoir.jpg" alt="Feature 3" />
+                  <img src="./images/armoir.jpg" alt="Feature 3" />
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   </p>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3 feature">
-                  <img src="armoir.jpg" alt="Feature 4" />
+                  <img src="./images/armoir.jpg" alt="Feature 4" />
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   </p>
@@ -257,11 +243,4 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
       </body>
     </html>
-    , initial-scale=1.0">
-    <title>Document</title>
-  </head>
-  <body></body>
-</html>
-
-</body>
-</html>
+ 
