--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     ></script>
   </head>
   <body>
+    <nav class="d-flex justify-content-around text-white p-2">
+      <a href="index.html">index</a>
+      <a href="jutiffy.html">jutiffy</a>
+      <a href="resolta.html">resolta</a>
+      <a href="resolution.html">resolution</a>
+    </nav>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
