--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   </head>
   <body>
     <nav class="d-flex justify-content-around text-white p-2">
-      <a href="index.html">index</a>
-      <a href="jutiffy.html">jutiffy</a>
-      <a href="resolta.html">resolta</a>
-      <a href="resolution.html">resolution</a>
+      <a href="">index</a>
+      <a href="">jutiffy</a>
+      <a href="">resolta</a>
+      <a href=""></a>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="resolution.html">resolution</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,21 +45,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="resolta.html">resolta</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="jutiffy.html">jutiffy</a>
             </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="index.html"
                 id="navbarDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Dropdown
+                index. 
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Action</a></li>
