--- a/index.html
+++ b/index.html
@@ -22,15 +22,10 @@
     ></script>
   </head>
   <body>
-    <nav class="d-flex justify-content-around text-white p-2">
-      <a href="">index</a>
-      <a href="">jutiffy</a>
-      <a href="">resolta</a>
-      <a href=""></a>
-    </nav>
+ 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="resolution.html">resolution</a>
+        <a class="navbar-brand" href="index.html">home</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,32 +40,31 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="resolta.html">resolta</a>
+              <a class="nav-link active" aria-current="page" href="jutiffy.html">resolta</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="jutiffy.html">jutiffy</a>
+              <a class="nav-link" href="boostrapfrest.html">jutiffy</a>
             </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="index.html"
                 id="navbarDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                index. 
+                others
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
+                <li><a class="dropdown-item" href="second.html">Action</a></li>
+                <li><a class="dropdown-item" href="solutions.html">Another action</a></li>
+                <!-- <li><hr class="dropdown-divider" /></li> -->
+                <!-- <li>
                   <a class="dropdown-item" href="#">Something else here</a>
-                </li>
+                </li> -->
               </ul>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a
                 class="nav-link disabled"
                 href="#"
@@ -78,7 +72,7 @@
                 aria-disabled="true"
                 >Disabled</a
               >
-            </li>
+            </li> -->
           </ul>
           <form class="d-flex">
             <input
